# crewsdashboardai

./: .env.example  .env.local  .gitignore  .vercelignore  Procfile  README.md  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  start_api.py  start_api.sh  start_servers.py  tailwind.config.ts  test_api.py  test_frontend.py  test_intelligent_creator.py  vercel.json
.devcontainer/: Dockerfile
api/: __init__.py  agents.py  health.py  index.py  requirements.txt  tasks.py
api/crew/: __init__.py  index.py  route.py
app/: globals.css  layout.tsx  page.tsx
app/api/crew/: route.ts
components/: ArtifactPanel.tsx  HistoryPanel.tsx  MatrixTerminal.tsx  MissionControl.tsx
frontend/: package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AgentCard.js  AgentLogsPanel.js  AgentManagementPanel.js  ChatBox.js  Header.js  LiveExecutionWindow.js  LoadingSkeleton.js  MainLayout.js  Settings.js  SystemStatus.js  TaskCard.js  Toast.js  WelcomeGuide.js
frontend/src/hooks/: useWebSocket.js
frontend/src/services/: api.js
lib/: supabase.ts
src/ai_agent_orchestration_hub/: __init__.py  api.py  crew.py  intelligent_agent_creator.py  intelligent_orchestrator.py  main.py
src/ai_agent_orchestration_hub/config/: __init__.py  agents.yaml  tasks.yaml
src/ai_agent_orchestration_hub/tools/: __init__.py
supabase/: schema.sql
tests/: __init__.py  test_api.py  test_frontend.py  test_intelligent_creator.py  test_nlp_api.py
